[tool.poetry]
name = "unscramble"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.7"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.942"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
disallow_untyped_defs = false